# siao-cnn-ornn

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_augmentation.py  train_pipeline.py
data/augmented/: timegan_class_0.pt  timegan_class_1.pt  timegan_class_2.pt  timegan_class_3.pt  timegan_class_4.pt  timegan_class_5.pt  y_augmented.npy
data/fwlb/: FeedWater Break 50.xlsx  IP200-fwb100p.xlsx  IP200-fwb20p.xlsx  IP200-fwb50p.xlsx
data/nppad/: nppad_processed.npz
data/porv/: IP200-pzrv100p.xlsx  IP200-pzrv1p10.xlsx  IP200-pzrv1p2.xlsx  IP200-pzrv1p4.xlsx  IP200-pzrv1p6.xlsx  IP200-pzrv1p8.xlsx  IP200-pzrv2p10.xlsx  IP200-pzrv2p2.xlsx  IP200-pzrv2p4.xlsx  IP200-pzrv2p6.xlsx  IP200-pzrv2p8.xlsx  IP200-pzrv3p10.xlsx  IP200-pzrv3p2.xlsx  IP200-pzrv3p4.xlsx  IP200-pzrv3p6.xlsx  IP200-pzrv3p8.xlsx  IP200-pzrv40p.xlsx  IP200-pzrv4p10.xlsx  IP200-pzrv4p2.xlsx  IP200-pzrv4p4.xlsx  IP200-pzrv4p6.xlsx  IP200-pzrv4p8.xlsx  IP200-pzrv5p10.xlsx  IP200-pzrv5p2.xlsx  IP200-pzrv5p4.xlsx  IP200-pzrv5p6.xlsx  IP200-pzrv5p8.xlsx  IP200-pzrv80p.xlsx  (+9 more)
notebooks/: model_logic.ipynb  siao_cnn_ornn_training.ipynb
results/: optuna_best_params.txt
stage0_augmentation/: __init__.py  mixup.py  quality_metrics.py  time_gan_augmentor.py  timegan_pytorch.py
stage1_data/: data_pipeline.py  nppad_loader.py  window_processor.py
stage2_features/: feature_extractor.py
stage3_models/: classifier.py  cnn_model.py  model_enhancement.py  ornn_model.py
stage4_optimizers/: aquila_optimizer.py  siao_optimizer.py
stage5_inference/: realtime_inference.py  reliability.py
(+45 files in other folders)
